--- a/Quiz/index.css
+++ b/Quiz/index.css
@@ -201,3 +201,34 @@ b {
     background-color: blue;
     color: white;
 }
+
+@media screen and (max-width: 468px) {
+    .rules-ctn {
+        width: 94%;
+        margin-left: 3%;
+        height: 375px;
+        margin-top: 25%;
+    }
+
+    .rules-ctn p {
+        margin-left: 10px;
+        font-size: medium;
+    }
+
+    .r-btn {
+        left: 30%;
+        font-size: small;
+        width: 150px;
+
+    }
+
+    .quiz-ctn, .score-ctn {
+        width: 90%;
+        margin-left: 5%;
+        margin-top: 25%;
+    }
+
+    .quiz-ctn .par {
+        text-align: left;
+    }
+}
